# CG-Experiment

./: OBJ_Loader.h  README.md  command.txt  draw.py  exp1  exp1.cpp  exp2  exp2.cpp  exp3  exp3.cpp  exp4  exp4.cpp  exp5  exp5.cpp  exp6  exp6.cpp  glad.c  loader.h  stb_image.h  temp  temp.cpp  test
exp6/: CMakeLists.txt
exp6/glsl/: fragment.fs  fragment_onelight.fs  gouraud_f.fs  gouraud_v.vs  vertex.vs
exp6/src/: Mesh.h  Model.h  main.cpp  program.h  shader.h
